syntax = "proto3";
package DomainServices.OfferService.v1;
option csharp_namespace = "DomainServices.OfferService.Contracts.v1";

import "Types.proto";
import "TypesMortgage.proto";

service OfferService {

	rpc GetOffer (DomainServices.OfferService.OfferIdRequest) returns (DomainServices.OfferService.GetOfferResponse);
	rpc getMortgageOffer (DomainServices.OfferService.OfferIdRequest) returns (DomainServices.OfferService.getMortgageOfferResponse);
	rpc getMortgageOfferDetail (DomainServices.OfferService.OfferIdRequest) returns (DomainServices.OfferService.getMortgageOfferDetailResponse);
	rpc SimulateMortgage (DomainServices.OfferService.SimulateMortgageRequest) returns (DomainServices.OfferService.SimulateMortgageResponse);
   
}